Fix jbossas7-quickstart compilation.