@@ -107,14 +107,15 @@
                </archive>
             </configuration>
          </plugin>
-         
+
          <!-- JBoss AS plugin to deploy war -->
          <plugin>
             <groupId>org.jboss.as.plugins</groupId>
             <artifactId>jboss-as-maven-plugin</artifactId>
             <version>7.0.0.Final</version>
          </plugin>
-         <!-- Compiler plugin enforces Java 1.6 compatibility and activates 
+
+         <!-- Compiler plugin enforces Java 1.6 compatibility and activates
             annotation processors -->
          <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -168,6 +169,53 @@
          </pluginRepositories>
       </profile>
 
+      <!-- This optional profile fixes the compilation error encountered with 'javax.annotation'
+         and Java 6. Java 6 embeds an older version of 'javax.annotation' that the one defined by
+         Java EE 6 (e.g. @Resource has no lookup attribute) -->
+      <profile>
+         <id>jdk6</id>
+         <activation>
+            <jdk>1.6</jdk>
+         </activation>
+         <build>
+            <plugins>
+               <!-- Here we copy the lib which has to be included in the compilation -->
+               <!-- This lib contains the new 'javax.annotation' package version -->
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-dependency-plugin</artifactId>
+                  <version>2.3</version>
+                  <executions>
+                     <execution>
+                        <id>copy-endorsed-lib</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                           <goal>copy</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+                  <configuration>
+                     <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                     <artifactItems>
+                        <artifactItem>
+                           <groupId>org.jboss.spec.javax.annotation</groupId>
+                           <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+                        </artifactItem>
+                     </artifactItems>
+                  </configuration>
+               </plugin>
+
+               <!-- Here we specify the directory containing the endorsed lib -->
+               <plugin>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>2.3.2</version>
+                  <configuration>
+                     <compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed</compilerArgument>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
    </profiles>
 
 </project>
